<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsafundzic.rotisseriesappnavbottom.CustomerRegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCustomerIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_id_text"/>


            <TextView
                android:id="@+id/tvCustomerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvCustomerIDText"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/etCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/etCustomerSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname" />

        <EditText
            android:id="@+id/etCustomerPasswordFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/etCustomerPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_again" />

        <Button
            android:id="@+id/btnCustomerLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</FrameLayout>
