<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsafundzic.rotisseriesappnavbottom.worker.WorkerAddNewWorkerFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/twWorkerIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker_id_text" />

            <TextView
                android:id="@+id/twWorkerID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/twWorkerIDText" />

        </RelativeLayout>

        <EditText
            android:id="@+id/etWorkerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/worker_name" />

        <EditText
            android:id="@+id/etWorkerSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/worker_surname" />

        <EditText
            android:id="@+id/etNewWorkerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/worker_password" />

        <EditText
            android:id="@+id/etWorkerSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/worker_salary"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnAddNewWorkerToList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_worker" />

    </LinearLayout>

</FrameLayout>
