<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvProductBuyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvProductBuyPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_below="@+id/tvProductBuyName"/>

    <Button
        android:id="@+id/btnIncreaseProductAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/tvProductAmount"
        android:text="@string/plus"/>

    <TextView
        android:id="@+id/tvProductAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:paddingTop="15dp"
        android:layout_toLeftOf="@id/btnDecreaseProductAmount"/>

    <Button
        android:id="@+id/btnDecreaseProductAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/minus"/>

</RelativeLayout>